--- a/Source/WebAPI/Properties/launchSettings.json
+++ b/Source/WebAPI/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "health",
-      "applicationUrl": "https://localhost:5000"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
